// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiSkipLink is rendered 1`] = `
<button
  aria-label="aria-label"
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--static testClass1 testClass2 euiButton--fill"
  data-test-subj="test subject string"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    >
      Skip
    </span>
  </span>
</button>
`;

exports[`EuiSkipLink props destinationId is rendered 1`] = `
<a
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--static euiButton--fill"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiSkipLink props onClick and destinationId is rendered 1`] = `
<a
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--static euiButton--fill"
  href="#somewhere"
  rel="noreferrer"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</a>
`;

exports[`EuiSkipLink props onClick is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--static euiButton--fill"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiSkipLink props position absolute is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--absolute euiButton--fill"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiSkipLink props position fixed is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--fixed euiButton--fill"
  tabindex="0"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiSkipLink props position static is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--static euiButton--fill"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;

exports[`EuiSkipLink props tabIndex is rendered 1`] = `
<button
  class="euiButton euiButton--primary euiButton--small euiScreenReaderOnly--showOnFocus euiSkipLink euiSkipLink--static euiButton--fill"
  tabindex="-1"
  type="button"
>
  <span
    class="euiButton__content"
  >
    <span
      class="euiButton__text"
    />
  </span>
</button>
`;
